RESOLVED FIXED154021
Error construction for inlined operations should not use the inliner's CodeBlock
https://bugs.webkit.org/show_bug.cgi?id=154021
Summary Error construction for inlined operations should not use the inliner's CodeBlock
Keith Miller
Reported 2016-02-08 17:32:49 PST
Error construction for inlined operations should not use the inliner's CodeBlock
Attachments
Patch (3.45 KB, patch)
2016-02-08 17:45 PST, Keith Miller
no flags
Patch for landing (3.50 KB, patch)
2016-02-08 18:27 PST, Keith Miller
no flags
Patch for landing (3.51 KB, patch)
2016-02-08 18:32 PST, Keith Miller
no flags
Keith Miller
Comment 1 2016-02-08 17:45:16 PST
Mark Lam
Comment 2 2016-02-08 18:04:36 PST
Comment on attachment 270900 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=270900&action=review r=me. Can you fix the styling in the test to be more webkit style compliant? > Source/JavaScriptCore/ChangeLog:12 > + oprationIn as we expected to be able to find the text "in" in the source. typo operationIn.
Keith Miller
Comment 3 2016-02-08 18:13:59 PST
Keith Miller
Comment 4 2016-02-08 18:14:44 PST
Comment on attachment 270900 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=270900&action=review >> Source/JavaScriptCore/ChangeLog:12 >> + oprationIn as we expected to be able to find the text "in" in the source. > > typo operationIn. Fixed.
Keith Miller
Comment 5 2016-02-08 18:27:33 PST
Created attachment 270904 [details] Patch for landing
Keith Miller
Comment 6 2016-02-08 18:28:15 PST
> Can you fix the styling in the test to be more webkit style compliant? Missed this before. Fixed also.
Mark Lam
Comment 7 2016-02-08 18:30:55 PST
Comment on attachment 270904 [details] Patch for landing I think you introduced an error in the test after the style fix. Please fix before landing.
Keith Miller
Comment 8 2016-02-08 18:32:37 PST
Created attachment 270905 [details] Patch for landing
Keith Miller
Comment 9 2016-02-08 18:35:37 PST
> I think you introduced an error in the test after the style fix. Please fix > before landing. Whoops. Good catch. I had a copy my project root directory and didn't cp the last set of fixes. Should be good to go now.
WebKit Commit Bot
Comment 10 2016-02-08 19:46:40 PST
Comment on attachment 270905 [details] Patch for landing Clearing flags on attachment: 270905 Committed r196302: <http://trac.webkit.org/changeset/196302>
WebKit Commit Bot
Comment 11 2016-02-08 19:46:43 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.